Implement Astronaut#average_age in model and view

--- a/app/views/astronauts/index.html.erb
+++ b/app/views/astronauts/index.html.erb
@@ -5,3 +5,5 @@
   <p>Age: <%= astronaut.age %></p>
   <p>Job: <%= astronaut.job %></p>
 <% end %>
+
+<h4>Average age: <%= @astronauts.average_age %></h4>
