--- a/app/views/astronauts/index.html.erb
+++ b/app/views/astronauts/index.html.erb
@@ -8,6 +8,7 @@
   <% astronaut.alpha_missions.each do |mission| %>
     <%= mission.title %>
   <% end %>
+  <p><%= astronaut.name %> Time in Space: <%= astronaut.time_in_space %></p>
 <% end %>
 
 <h4>Average age: <%= @astronauts.average_age %></h4>
